--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
 		<div id="instructions"></div>
 		<div id="center"><p>Why we explore?</p></div>
 		<div id="center_btn">
-			<a href="#why" class="nav-button btn_sign"><strong>Why we explore?</strong></a>
-			<a href="#explore" class="nav-button btn_sign"><strong>Let's explore</strong></a>
+			<a href="#explore" class="nav-button btn_sign"><strong>Tell Us</strong></a>
+			<a href="#why" class="nav-button btn_sign"><strong>Discover</strong></a>
 		</div>
 	</div>
 
