esta es una prueba
test

--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="es">
 <head>
 	<meta charset="UTF-8">
-  	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  	<!--<link rel="icon" href="/img/favicon.ico" type="image/x-icon" />-->
+	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+	<!--<link rel="icon" href="/img/favicon.ico" type="image/x-icon" />-->
 	<title>Exploring everything</title>
 	<link rel="stylesheet" href="css/normalize.css" type="text/css">
 	<link rel="stylesheet" href="css/style.css" type="text/css">
@@ -50,19 +50,13 @@
 		<div id="instructions"></div>
 		<div id="center"><p>Why we explore?</p></div>
 		<div id="center_btn">
-			<a href="#why" class="nav-button btn_sign"><strong>Discover</strong></a>
+			<a href="./Discover.html" class="nav-button btn_sign"><strong>Discover</strong></a>
 			<a href="#explore" class="nav-button btn_sign"><strong>Tell Us</strong></a>
 		</div>
 	</div>
 
 	<div class="slide" id="why">
 		<div id="question"><p>Discover With Us</p></div>
-		<!--<div id="center_btn">
-			<input class="input_question" type="text" placeholder="Tell us why do you think we explore">
-		</div>
-		<div class="wrapper" id="feed">
-		</div>-->
-		Hola
 	</div>
 
 	<div class="slide" id="explore">
