agregando boton de twitter

--- a/index.html
+++ b/index.html
@@ -62,7 +62,10 @@
 	<div class="slide" id="explore">
 		<div id="question"><p>Why do you think we explore?</p></div>
 		<div id="center_btn">
-			<input class="input_question" type="text" placeholder="Tell us why do you think we explore">
+			<input id="input_tweet" type="text" main="input_tweet" class="input_question" placeholder="Tell us why do you think we explore">
+
+			<a href="https://twitter.com/share" class="twitter-share-button" data-text="Exploring Everithing" data-size="large" data-hashtags="whyweexplore">Tweet</a>
+			<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
 		</div>
 		<div class="wrapper" id="feed">
 		</div>
