--- a/Discover.html
+++ b/Discover.html
@@ -15,7 +15,7 @@
 	<link rel="stylesheet" type="text/css" href="css/styles.css" />
 	<script src="js/modernizr.custom.js"></script>
 </head>
-<body style="background-color: white">
+<body style="background-color: black">
 	<div class="container">
 
 		<header class="clearfix">
@@ -134,7 +134,7 @@ Blue LED light has various positive effects on the body. It can, for example, re
 						</div>
 					</div>
 				</li>
-				<li class="icon-clima-11">
+				<li class="">
 					<span class="rb-temp">Water purification</span>
 					<div class="rb-overlay">
 						<span class="rb-close">close</span>
@@ -150,8 +150,9 @@ Blue LED light has various positive effects on the body. It can, for example, re
 					<div class="rb-overlay">
 						<span class="rb-close">close</span>
 						<div class="rb-week image-reach-stars">
+							<div></div>
 							<div>
-								<iframe width="560" height="315" src="http://www.youtube.com/embed/e7DEw70LVWs" frameborder="0" allowfullscreen></iframe>
+								<iframe width="100%" height="100%" src="http://www.youtube.com/embed/e7DEw70LVWs" frameborder="0" allowfullscreen></iframe>
 							</div>
 						</div>
 					</div>
@@ -159,11 +160,7 @@ Blue LED light has various positive effects on the body. It can, for example, re
 
 				<li class="rb-span-4">
 					<span class="rb-temp">We want you to help us</span>
-					<div class="rb-overlay">
-						<span class="rb-close">close</span>
-						<div class="rb-week">
-							<div>
-								Space is the coolest thing we’ve known since we were kids and Astronauts were better than
+					Space is the coolest thing we’ve known since we were kids and Astronauts were better than
 Rockstars. This is childish, of course, but we also understand that exploration brings a lot of
 benefits with it, such as development, self awareness, among others. Exploration is more than
 just space though... we should look into exploring the ocean floor also, and constantly work on
@@ -172,7 +169,10 @@ science was and always will be - the future -
 
 Why do you think we explore? What are you exploring? How can we explore together? Share
 your thoughts with us here!
-							</div>
+					<div class="rb-overlay">
+						<span class="rb-close">close</span>
+						<div class="rb-week">
+							
 						</div>
 					</div>
 				</li>
