--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 		<div id="center_btn">
 			<input id="input_tweet" type="text" main="input_tweet" class="input_question" placeholder="Tell us why do you think we explore">
 
-			<a id="tweet_button" href="https://twitter.com/share" class="twitter-share-button" data-text="Exploring Everithing" data-size="large" data-hashtags="whyweexplore">Tweet</a>
+			<a id="tweet_button" href="https://twitter.com/share" class="twitter-share-button" data-text="Exploring Everything" data-size="large" data-hashtags="whyweexplore">Tweet</a>
 			<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
 		</div>
 		<div class="wrapper" id="feed">
@@ -100,11 +100,11 @@
 		}
 	}
 	function changevalue(){
-   		//obtenemos el objeto del elemento de id x..
-   		var text2 = document.getElementById('tweet_button');
+		//obtenemos el objeto del elemento de id x..
+		var text2 = document.getElementById('tweet_button');
 
-   		//aca asignas los valores a las cajas de texto declaradas
-   		text2.value =document.getElementById('input_tweet').value;
+		//aca asignas los valores a las cajas de texto declaradas
+		text2.value =document.getElementById('input_tweet').value;
 	}
 	</script>
 </body>
