--- a/imagenes.html
+++ b/imagenes.html
@@ -15,7 +15,8 @@
 		<link rel="stylesheet" type="text/css" href="css/styles.css" />
 		<script src="js/modernizr.custom.js"></script>
 	</head>
-	<body><div class="container">	
+	<body>
+		<div class="container">	
 			<div class="main">
 
 				<ul id="rb-grid" class="rb-grid clearfix">
