--- a/index.html
+++ b/index.html
@@ -5,12 +5,9 @@
   	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   	<!--<link rel="icon" href="/img/favicon.ico" type="image/x-icon" />-->
 	<title>Exploring everything</title>
-	<!-- <link rel="stylesheet" type="text/css" href="css/default.css" /> -->
-	<link rel="stylesheet" type="text/css" href="css/climacons.css" />
-	<link rel="stylesheet" type="text/css" href="css/component.css" />
-	<link rel="stylesheet" type="text/css" href="css/normalize.css">
-	<link rel="stylesheet" type="text/css" href="css/style.css" >
-	<!-- <script src="js/modernizr.custom.js"></script> -->
+	<link rel="stylesheet" href="css/normalize.css" type="text/css">
+	<link rel="stylesheet" href="css/style.css" type="text/css">
+	
 	<style>
 		#bg{
 			background: url(img/bg.jpg) no-repeat rgb(10,10,23);
@@ -53,14 +50,9 @@
 		<div id="instructions"></div>
 		<div id="center"><p>Why we explore?</p></div>
 		<div id="center_btn">
-			<a href="./imagenes.html" class="nav-button btn_sign"><strong>Discover</strong></a>
+			<a href="why.html" class=" btn_sign"><strong>Discover</strong></a>
 			<a href="#explore" class="nav-button btn_sign"><strong>Tell Us</strong></a>
 		</div>
-	</div>
-
-	<div class="slide" id="why">
-		<div id="question"><p>Discover With Us</p></div>
-		 
 	</div>
 
 	<div class="slide" id="explore">
