--- a/Discover.html
+++ b/Discover.html
@@ -38,7 +38,7 @@
 					<div style="clip: auto; opacity: 0; z-index: -1; pointer-events: none;" class="rb-overlay">
 						<span class="rb-close">close</span>
 						<div class="rb-week atlantis">
-							<iframe width="100%" height="100%" src="http://www.youtube.com/embed/MP1gvGcXcLk" frameborder="0" allowfullscreen></iframe>
+							<iframe width="100%" height="100%" src="http://www.youtube.com/embed/DEw6X2BhIy8" frameborder="0" allowfullscreen></iframe>
 						</div>
 					</div>
 				</li>
@@ -179,20 +179,19 @@
 						</div>
 					</div>
 				</li>
+
+
 				<li class="rb-span-2 stars-thumb">
-					<span class="rb-temp">We want to reach the stars</span>
-					<div class="rb-overlay">
+					<span class="rb-temp">We explore because that’s where we come from.</span>
+					<div style="clip: auto; opacity: 0; z-index: -1; pointer-events: none;" class="rb-overlay">
 						<span class="rb-close">close</span>
-						<div class="rb-week stars">
-							<div></div>
-							<div>
-								<iframe width="100%" height="100%" src="http://www.youtube.com/embed/e7DEw70LVWs" frameborder="0" allowfullscreen></iframe>
-							</div>
+						<div class="rb-week atlantis">
+							<iframe width="100%" height="100%" src="http://www.youtube.com/embed/e7DEw70LVWs" frameborder="0" allowfullscreen></iframe>
 						</div>
 					</div>
 				</li>
 
-				<li class="rb-span-4 stars-thumb">
+				<li href="http://www.quickmeme.com/Linguist-Llama/?upcoming" class="rb-span-4 stars-thumb">
 					<span class="rb-temp">We want you to help us</span>
 					Space is the coolest thing we’ve known since we were kids and Astronauts were better than
 					Rockstars. This is childish, of course, but we also understand that exploration brings a lot of
