--- a/Discover.html
+++ b/Discover.html
@@ -191,7 +191,7 @@
 					</div>
 				</li>
 
-				<li href="http://www.quickmeme.com/Linguist-Llama/?upcoming" class="rb-span-4 stars-thumb">
+				<a href="index.html#explore"><li class="rb-span-4 stars-thumb">
 					<span class="rb-temp">We want you to help us</span>
 					Space is the coolest thing we’ve known since we were kids and Astronauts were better than
 					Rockstars. This is childish, of course, but we also understand that exploration brings a lot of
@@ -205,10 +205,9 @@
 					<div class="rb-overlay">
 						<span class="rb-close">close</span>
 						<div class="rb-week">
-							
 						</div>
 					</div>
-				</li>
+				</li></a>
 			</ul>
 
 		</div>
