--- a/Discover.html
+++ b/Discover.html
@@ -15,9 +15,12 @@
 	<link rel="stylesheet" type="text/css" href="css/styles.css" />
 	<script src="js/modernizr.custom.js"></script>
 	<style>
-		#container{
-			background: url(img/squairy_light.png);
-		}
+	body{
+			background: url(img/stars.jpg) no-repeat rgb(10,10,23);
+			-webkit-background-size: cover;
+			-moz-background-size: cover;
+			background-size: cover;
+	}
 	</style>
 </head>
 <body>
@@ -28,7 +31,7 @@
 
 	<div class="container">
 		<header class="clearfix">
-			<p class="tag">Why we explore?</p>
+			<p class="tag3">Why we explore?</p>
 		</header>
 		<div class="main">
 
