--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 	<div class="slide" id="explore">
 		<div id="question2"><p>Why do you think we explore?</p></div>
 		<div id="center_btn">
-			<input id="input_tweet" type="text" main="input_tweet" class="input_question" placeholder="Tell us why do you think we explore">
+			<input id="input_tweet" type="text" main="input_tweet" class="input_question" placeholder="Tell us why do you think we explore and press Enter">
 		</div>
 		<div class="wrapper" id="feed">
 		</div>
